...
import kotlin.math.min

object FakeDataSource {
    private val item= ItemDto(
        listOf(
            VolumeDto("1",
                VolumeInfoDto("android_1",listOf("1_1","1_2"),"publisher1",
                    "0101","description1description1description1description1" +
                            "description1description1description1description1description1description1" +
                            "description1description1description1description1description1description1" +
                            "description1description1description1description1description1description1" +
                            "description1description1description1description1description1description1" +
                            "description1description1description1description1description1description1" +
...
            ),
            VolumeDto("2",
                VolumeInfoDto("android_2",listOf("2_1","2_2"),"publisher2",
                    "0202","description2", VolumeImageDto())
            ),
            VolumeDto("3",
                VolumeInfoDto("android_3",listOf("3_1","3_2"),"publisher3",
                    "0303","description3", VolumeImageDto())
            ),
            VolumeDto("4",
                VolumeInfoDto("android_4",listOf("4_1","4_2"),"publisher4",
                    "0404","description4", VolumeImageDto())
            ),
...
